--- a/index.html
+++ b/index.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
-<html style="padding: 0px;">
-
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
-    <meta charset="utf-8">
+<html style="padding: 0px">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./index.css" />
+    <meta charset="utf-8" />
     <title>KiritoChen的个人主页</title>
-</head>
+  </head>
 
-<body>
-    <div style="display: flex;align-items:center;">
-        <div style="margin-right: 16px;">
-            <a class="Header-link" href="https://github.com/KiritoCheng" data-hotkey="g d" aria-label="Homepage "
-                data-ga-click="Header, go to dashboard, icon:logo">
-                <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1"
-                    width="32" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                    </path>
-                </svg>
-            </a>
-        </div>
-        <div style="flex:1;font-size: 26px;line-height: 1.25;">
-            KiritoCheng的个人主页
-        </div>
+  <body>
+    <div style="display: flex; align-items: center">
+      <div style="margin-right: 16px">
+        <a
+          class="Header-link"
+          href="https://github.com/KiritoCheng"
+          data-hotkey="g d"
+          aria-label="Homepage "
+          data-ga-click="Header, go to dashboard, icon:logo"
+        >
+          <svg
+            class="octicon octicon-mark-github v-align-middle"
+            height="32"
+            viewBox="0 0 16 16"
+            version="1.1"
+            width="32"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <div style="flex: 1; font-size: 26px; line-height: 1.25">
+        KiritoCheng的个人主页
+      </div>
     </div>
 
-    <p><a href="./Switch">纯csss写witch动画演示</a></p>
+    <div class="card_box">
+      <div class="card" style="background: #29b6f6">
+        <p class="font32">娱乐</p>
+      </div>
+      <div class="card" style="background: #66bb6a">
+        <p class="font32">学习</p>
+        <p class="link" onclick="navigate({url:'Switch'})">
+          纯csss写witch动画演示
+        </p>
+      </div>
+      <div class="card" style="background: #ffa726">
+        <p class="font32">文件</p>
+      </div>
+      <div class="card" style="background: #ffca28">
+        <p class="font32">其他</p>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
-</body>
-
+    <script type="text/javascript" src="./index.js"></script>
+  </body>
 </html>
